--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <ul>
         <li>
-            <a href="./Azure/index.html">Azure</a>
+            <!-- <a href="./Azure/index.html">Azure</a> -->
+            <a href="./Doordash/index.html">Doordash</a>
         </li>
     </ul>
 </body>
