--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -72,8 +72,9 @@
                 </div>
                 <div class="filterCategories">
                     <section>
-                        <span>CATEGORIES</span>
-                        <span><i class="fa-solid fa-angle-left"></i>Mobile & Accessories</span>
+                        <span class="first">CATEGORIES</span>
+                        <span class="second"><i class="fa-solid fa-angle-left"></i>Mobile & Accessories</span>
+                        <span class="third">Mobiles</span>
                     </section>
                 </div>
             </div>
