--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -98,10 +98,10 @@
                         <span>to</span>
 
                         <select class="maxRange" name="" id="max">
-                            <option value="max">Max</option>
                             <option value="max">₹40000</option>
                             <option value="max">₹50000</option>
                             <option value="max">₹60000+</option>
+                            <option value="max">₹70000+</option>
                         </select>
                     </div>
                 
@@ -115,7 +115,7 @@
                         <i class="fa-solid fa-angle-up"></i>
                     </div>
                     <div class="brandOption">
-                        <label id="apple" for="">
+                        <label id="apple-el" for="">
                             <input id="" type="checkbox">
                             APPLE
                         </label>
@@ -168,7 +168,7 @@
 
             <div class="productDetailSection">
                 <div class="textPointer">
-                    <div class="product-container">
+                    <div class="product-containers">
                         <div class="sortMobile">
                             <span>Home</span>
                             <span>Mobiles & Ac...</span>
