--- a/flipkart/index.html
+++ b/flipkart/index.html
@@ -138,7 +138,7 @@
                   
                         <label id="" for="">
                             <input id="poco-el" type="checkbox">
-                            poco</label>
+                            REALME</label>
                
                         <label id="" for="">
                             <input id="oppo-el" type="checkbox">
@@ -365,7 +365,7 @@
                         <a href="#">Twitter</a>
                         <a href="#">YouTube</a>
                     </div>
-                    <div class="about">
+                    <div class="aboutOne aboutOnes">
                         <div>Mail Us:</div>
                         <a href="#">Flipkart Internet Private Limited, </a>
                         <a href="#"> Buildings Alyssa, Begonia & </a>
@@ -374,7 +374,7 @@
                         <a href="#"> Bengaluru, 560103, </a>
                         <a href="#"> Karnataka, India</a>
                     </div>
-                    <div class="about">
+                    <div class="aboutOne">
                         <div>Registered Office Address</div>
                         <a href="#">Flipkart Internet Private Limited, </a>
                         <a href="#"> Buildings Alyssa, Begonia & </a>
@@ -388,22 +388,26 @@
                 </div>
                 <div class="partTwo">
                     <div class="optionImg">
-                        <img src="" alt="">
+                        <img src="/Assets/img/svgexport-15.svg" alt="">
                         <span>Become a Seller</span>
                     </div>
                     <div class="optionImg">
-                        <img src="" alt="">
+                        <img src="/Assets/img/svgexport-16 (1).svg" alt="">
                         <span>Advertise</span>
                     </div>
                     <div class="optionImg">
-                        <img src="" alt="">
+                        <img src="/Assets/img/svgexport-17 (1).svg" alt="">
                         <span>Gift Cards</span>
                     </div>
                     <div class="optionImg">
-                        <img src="" alt="">
+                        <img src="/Assets/img/svgexport-18.svg" alt="">
                         <span>Help Center</span>
                     </div>
-                        <span>© 2007-2023 Flipkart.com</span>
+
+                        <span class="com">© 2007-2023 Flipkart.com</span>
+                        <div class="optionImg">
+                            <img src="/Assets/img/billing.svg" alt="">
+                        </div>
                 </div>
             </div>
         </footer>
