feat:nabBar-complete

--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -28,7 +28,7 @@
                 <i class="fa-solid fa-location-dot"></i>
                 <div class="location-icon">
                     <span class="greeting">Hello</span>
-                    <span>Select your address</span>
+                    <span class="address">Select your address</span>
                 </div>
 
             </div>
@@ -49,22 +49,28 @@
             </div>
             <div class="account-section">
                 <div class="country-language">
-                    <img src="/Amazon/Assets/Img/flag.png" alt="" width="20px">
+                    <img src="/Amazon/Assets/Img/flag.png" alt="" width="21px" height="16px">
                     <!-- flag -->
                     <span>EN</span>
-                    <!-- i-tag -->
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="account-list">
-                    <span>Hello, sign in</span>
-                    <span>Account $ lists</span> <i></i>
+                    <span class="sign">Hello, sign in</span>
+                    <div>
+                        <span class="accounts">Account & lists</span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
                 </div>
                 <div class="order-returns">
-                    <span>Returns</span>
-                    <span>& Orders</span>
+                    <span class="product-return">Returns</span>
+                    <span class="product-order">& Orders</span>
                 </div>
                 <div class="cart-section">
-                    <span>0</span>
-                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span class="queue">0</span>
+                    <div>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="cart">Cart</span>
+                    </div>
 
                 </div>
 
@@ -74,15 +80,57 @@
 
         <div class="nav-centre">
 
-        </div>
-        <div class="nav-bottom">
+            <div class="all-item">
+                <div class="container">
+                    <div class="burger-nav">
+                        <i class="fa-solid fa-bars"></i>
+                        <span>All</span>
+                    </div>
+                    <div class="product-list">
+                        <span>Amazon miniTV</span>
+                        <span>Sell</span>
+                        <span>Best Seller</span>
+                        <span>Mobile</span>
+                        <span>Today's Deals</span>
+                        <span>Customer Service</span>
+                        <span>Electronics</span>
+                        <span>Prime<i class="fa-solid fa-angle-down"></i></span>
+                        <span>New Releases</span>
+                        <span>Home & Kitchen</span>
+                        <span>Amazon Pay</span>
+                        <span>Fashion</span>
+                    </div>
+                </div>
+                <div class="new-product">
+                    <img src="/Amazon/Assets/Img/newLanc.jpg" alt="">
+                </div>
+            </div>
 
         </div>
+     </div>
 
+     <div class="nav-bottom">
+        <div id="category-el">
+        </div>
+     </div>
+     <div class="product-sorting">
+        <span>1-24 of 392 results</span>
+        <div class="sort-by">
+            <span>Sort by:</span>
+            <span>Price: High to Low</span>
+            <i class="fa-solid fa-angle-down"></i>
+        </div>
     </div>
-    <div class="testImg">
-        <!-- <img src="https://m.media-amazon.com/images/G/31/gno/sprites/nav-sprite-global-1x-hm-dsk-reorg._CB405936311_.png" alt=""> -->
-    </div>
+    <main>
+        <div class="left-main">
+
+        </div>
+        <div class="right-main">
+            
+        </div>
+    </main>
+</div>
+</body>
 
     <script src="index.js"></script>
 </body>
