--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -194,6 +194,15 @@
               <input type="text" placeholder="₹Max" /> <span>Go</span>
             </div>
           </div>
+          <div class="discountOption">
+            <span class="price">Discount</span>
+            <div class="discountSection">
+              <span>10% Off or more</span>
+              <span>25% Off or more</span>
+              <span>35% Off or more</span>
+              <span>50% Off or more</span>
+            </div>
+          </div>
         </div>
       </div>
       <div class="right-main">
