--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <ul>
         <li>
-            <!-- <a href="./Azure/index.html">Azure</a> -->
+            <a href="./Azure/index.html">Azure</a>
             <a href="./Doordash/index.html">Doordash</a>
+            <a href="./flipkart/index.html">flipcart</a>
+            <a href="./Amazon/index.html">amazon</a>
+            <a href="./etsy/index.html">etsy</a>
         </li>
     </ul>
 </body>
