feat:mobileFilter-brand--filterDone

--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -34,16 +34,19 @@
                   <span class="heading">Sort by</span>
                 </div>
                 <div class="rightSide-filter">
-                  <h4>Brands</h4>
-                  <span class="samsung">Samsung</span>
-                  <span class="oneplus">OnePlus</span>
-                  <span class="apple">Apple</span>
+                  <div class="brandFilter">
+                    <h4>Brands</h4>
+                    <span class="samsung">Samsung </span>
+                    <span class="oneplus">OnePlus</span>
+                    <span class="apple">Apple</span>
+                  </div>
                 </div>
               </div>
            
           </div>
           <div class="results">
-            <span>Show 10,000+ results</span>
+            <span class="clearFilter">Clear Filter</span>
+            <span class="result">Show 10,000+ results</span>
           </div>
         </div>
         <div class="mobileNavContainer">
