feat: clone amazon site mobileFilter updated

--- a/Amazon/index.html
+++ b/Amazon/index.html
@@ -27,25 +27,50 @@
             </div>
             <div class="filter-section">
               <div class="leftSide-filter">
-                <span class="heading">Prime & Delivery</span>
+                <!-- <span class="heading">Prime & Delivery</span> -->
                 <span class="brand">Brand</span>
-                <span class="heading">Price and Deals</span>
-                <span class="heading">customer Reviews</span>
-                <span class="heading">Sort by</span>
+                <!-- <span class="heading">Price and Deals</span> -->
+                <span class="heading customerReviewFilter">customer Reviews</span>
+                <!-- <span class="heading">Sort by</span> -->
               </div>
               <div class="rightSide-filter">
                 <div class="brandFilter">
-                  <h4>Brands</h4>
                   <span class="samsung">Samsung </span>
                   <span class="oneplus">OnePlus</span>
                   <span class="apple">Apple</span>
                 </div>
+                <div class="customerReview">
+                  <div class="fourMore fourStar">
+                    <div class="starsOnly">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                    </div>
+                    <span class="stars">& Up</ class="stars">
+                  </div>
+                  <div class="fourMore threeStar">
+                    <div class="starsOnly">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                    </div>
+                    <span class="stars">& Up</span>
+                  </div>
+                  <div class="fourMore twoStar">
+                    <div class="starsOnly">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                      <img src="/Amazon/Assets/Img/oneStar.png" alt="">
+                    </div>
+                    <span class="stars">& Up</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="results">
-            <span class="clearFilter">Clear Filter</span>
-            <span class="result">Show 10,000+ results</span>
+          <div class="results-section">
+            <span class="clearFilter results">Clear Filter</span>
+            <span onclick="popdown()" class="result">Show results</span>
           </div>
         </div>
         <div class="mobileNavContainer">
